--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@material-ui/core": "^4.5.0",
     "axios": "^0.19.0",
-    "react": "^16.10.2",
+    "dom": "^0.0.3",
+    "formik": "^2.0.4",
+    "react": "^16.12.0",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-swipeable-views": "^0.13.3",
-    "styled-components": "^4.4.0"
+    "router": "^1.3.3",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
